# edda

./: .cursorignore  .edda.toml  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.cursor/learnings/: AI_AGENT_LEARNINGS.md  CLI_LEARNINGS.md  PROJECT_LEARNINGS.md  README.md
.cursor/rules/: 00-core.mdc  01-development-tools.mdc  03-tasks.mdc  05-dependencies.mdc  12-platform-specific.mdc  20-testing-standards.mdc  25-learnings-documentation.mdc  30-commit-guidelines.mdc  40-best-practices.mdc  50-continuous-integration.mdc  60-markdown-documentation.mdc  61-code-documentation.mdc  70-error-handling.mdc  99-cursor-rules.mdc
.cursor/spec/: SPEC_AI_AGENT_COLLABORATION.md  SPEC_AI_AGENT_INTELLIGENCE.md  SPEC_AI_AGENT_SAFETY.md  SPEC_AI_INTEGRATION.md  SPEC_ARCHITECTURE.md  SPEC_CLI_DESIGN.md  SPEC_CONFIGURATION.md  SPEC_CONSOLIDATION_PROGRESS.md  SPEC_DATA_MODELS.md  SPEC_DEPLOYMENT.md  SPEC_DEVELOPMENT.md  SPEC_DOCUMENT_MANAGEMENT.md  SPEC_ERROR_HANDLING.md  SPEC_OVERVIEW.md  SPEC_PROCESS_GUIDE.md  SPEC_QUERY_ENGINE.md  SPEC_REDUNDANCY_ANALYSIS.md  SPEC_STORAGE_ENGINE.md  SPEC_STYLE_GUIDE.md  SPEC_SYNC_ENGINE.md  SPEC_TASKWARRIOR_PARITY.md  SPEC_TASK_MANAGEMENT.md
.cursor/todo/: 00-mvp-phase-0.md  01-architecture-implementation.md  02-specification-consolidation.md  03-ai-agent-features.md  03-sync-providers.md  04-ai-agent-integration.md  05-deployment-and-distribution.md  06-server-implementation.md  README.md
.github/: dependabot.yml
.github/workflows/: main.yml  performance.yml  release.yml.disabled  security.yml
docs/: DEVELOPER_SETUP.md
scripts/: install.ps1  install.sh
src/: cli.rs  core.rs  github.rs  lib.rs  main.rs  storage.rs  sync.rs
src/cli/: config.rs  doc.rs  mod.rs  state.rs  sync.rs  system.rs  task.rs
src/core/: config.rs  error.rs  logging.rs  mod.rs  task.rs
src/handlers/: doc.rs  mod.rs  query.rs  state.rs  sync.rs  system.rs  task.rs
src/storage/: database.rs  mod.rs  task_storage.rs
tests/: cli_task.rs
