[package]
name = "edda"
version = "0.1.0"
edition = "2024"
authors = ["Marcus Ekwall <marcus.ekwall@gmail.com>"]
description = "Edda: AI agent-native CLI for structured task and document management."
license = "MIT"
repository = "https://github.com/mekwall/edda"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"
thiserror = "1.0"
toml = "0.8"
dirs = "5.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
atty = "0.2"
