[package]
name = "edda"
version = "0.1.0"
edition = "2024"
authors = ["Marcus Ekwall <marcus.ekwall@gmail.com>"]
description = "Edda: AI agent-native CLI for structured task and document management."
license = "MIT"
repository = "https://github.com/mekwall/edda"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"
thiserror = "2.0"
toml = "0.8"
dirs = "5.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
atty = "0.2"
serde_json = "1.0"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"
